@@ -21,6 +21,7 @@ EXTRA_DIST = adv_packet.cpp adv_packet.h\
              lwrp_clientconnection.cpp lwrp_clientconnection.h\
              lwrp_server.cpp lwrp_server.h\
              profile.cpp profile.h\
+             ringbuffer.cpp ringbuffer.h\
              routing.cpp routing.h\
              rtp.cpp rtp.h
 
